# ctf-archives

./: .gitignore  LICENSE  README.md
ALLES/2021/crypto/legit-bank/cli/: Cargo.toml
ALLES/2021/crypto/legit-bank/cli/src/: main.rs
ALLES/2021/crypto/secret-store/cli/: Cargo.toml
ALLES/2021/crypto/secret-store/cli/src/: lib.rs  main.rs
ASIS/2020/Finals/minilang++/source/: CMakeLists.txt
ASIS/2020/Finals/minilang++/source/src/: main.cpp
ASIS/2020/Finals/minilang++/source/src/lexer/: token.cpp
ASIS/2020/Finals/minilang++/source/src/parser/: ast.cpp  parser.h
ASIS/2020/Finals/minilang++/source/src/visitor/: interpreter.h  semantic_analysis.h  visitor.h
DiceCTF/2023/pwn/chessrs/app/: Cargo.toml
DiceCTF/2023/pwn/chessrs/app/src/: main.rs
DiceCTF/2023/pwn/chessrs/app/static/: engine.html  index.html
DiceCTF/2023/pwn/chessrs/app/static/css/: styles.css
DiceCTF/2023/pwn/chessrs/app/static/js/: chess_wasm.js  chess_wasm_bg.wasm
DiceCTF/2023/pwn/chessrs/chess-wasm/: Cargo.toml
DiceCTF/2023/pwn/chessrs/chess-wasm/src/: game.rs  lib.rs
DiceCTF/2023/pwn/otterworld/framework/: Cargo.toml
DiceCTF/2023/pwn/otterworld/framework-solve/: Cargo.toml
LA/2023/pwn/sailor/chall/: Cargo.toml
LA/2023/pwn/sailor/chall/src/: lib.rs
N1CTF/2022/blockchain/Backdoor/framework/: Cargo.toml  Dockerfile
N1CTF/2022/blockchain/Backdoor/framework/src/: main.rs
PlaidCTF/2021/web/Plaid_Party_Planning_IV/main/: .ocamlformat  pins.sh  pppiv.opam
PlaidCTF/2021/web/Plaid_Party_Planning_IV/main/client/src/: connection.mli  drag_and_drop.mli  dune  header.ml  header.mli  local_storage.ml  local_storage.mli  score_changes.ml  scoreboard_view.ml  scoreboard_view.mli  videoconference.mli
PlaidCTF/2021/web/Plaid_Party_Planning_IV/main/server/src/: server.ml  server.mli
PlaidCTF/2021/web/Plaid_Party_Planning_IV/main/src/: dune  evaluate.ml  evaluate.mli  game.ml  import.ml  person.ml  protocol.ml  room.ml  scoreboard.mli
PlaidCTF/2023/crypto/the-other-css/css/: pyproject.toml
PlaidCTF/2023/crypto/the-other-css/css/css/: make_disk.py  mangle.py  mode.py  player.py  table.py
RACTF/2021/web/Secret_Store/: pyproject.toml
RACTF/2021/web/Secret_Store/src/secret/: apps.py  serializers.py  views.py
RACTF/2021/web/Secret_Store/src/secretstore/: settings.py  wsgi.py
RACTF/2021/web/Secret_Store/src/templates/: base.html
RACTF/2021/web/Secret_Store/src/templates/registration/: login.html
TAMUctf/2023/web/flag-fetcher/: Cargo.toml
TAMUctf/2023/web/web-lto/web-lto/: Cargo.toml
angstrom/2023/pwn/SailorsRevenge/chall/: Cargo.toml
angstrom/2023/pwn/SailorsRevenge/chall/src/: entrypoint.rs  lib.rs
corCTF/2022/pwn/solidarity/server/: Cargo.toml
corCTF/2022/pwn/solidarity/server/src/: main.rs
ctfs/0xL4ugh/2024/misc/Minty/: Cargo.toml  Dockerfile  README.md  start.sh
ctfs/BackdoorCTF/2023/crypto/ProveMeWrong/: Cargo.toml  README.md
ctfs/BackdoorCTF/2023/crypto/ProveMeWrong/src/: kzg.rs  main.rs  serialization.rs
ctfs/BackdoorCTF/2023/crypto/ProveMeWrong/src/trusted_setup/: mimc.rs  mod.rs
ctfs/BlazCTF/2023/Hide_on_Bush/frontrun-bot/: .gitignore  Cargo.toml  Dockerfile  daemon.py
ctfs/BlazCTF/2023/Hide_on_Bush/frontrun-bot/src/: call_tracer.rs  frontrun_strategy.rs  main.rs  mempool_executor.rs  utils.rs
ctfs/CCCamp/2023/game/Cheat_Code/: README.md  pyproject.toml
ctfs/CCCamp/2023/game/Cheat_Code/db/: init.sh
ctfs/CyberSecurityRumble/2022/pwn/EncryptNStuff/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/: CMakeLists.txt  README.md  challenge.diff  kernel.x  kernel64.x  setup_cmake.sh
ctfs/Glacier/2023/pwn/flipper/arch/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/arch/x86/64/: CMakeLists.compiler  (+4 more)
ctfs/Glacier/2023/pwn/flipper/cmake/: AddDebugInfo.cmake  MakeArchTarget.cmake
ctfs/Glacier/2023/pwn/flipper/common/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/common/source/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/userspace/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/userspace/data/: README.txt
ctfs/Glacier/2023/pwn/flipper/userspace/libc/: CMakeLists.txt
ctfs/Glacier/2023/pwn/flipper/userspace/tests/: CMakeLists.txt  exploit.c  mult.c
ctfs/Glacier/2023/pwn/flipper/utils/: CMakeLists.txt  bochsrc  emu.txt  gdbinit  mount.sh  netinit.sh  prompt.sh  sweb.dox  travis_test.sh  umount.sh
ctfs/Glacier/2023/pwn/flipper/utils/add-debug/: CMakeLists.txt  LICENSE.libelfin  add-dbg.cc
ctfs/Glacier/2023/pwn/flipper/utils/exe2minixfs/: CMakeLists.txt  MinixFSType.h  Mutex.h  MutexLock.h  exe2minixfs.cpp  kprintf.h  kstring.h  types.h
ctfs/Glacier/2023/pwn/flipper/utils/images/: CMakeLists.txt  menu.lst
ctfs/Hack.lu/2023/web/Awesomenotes_II/: Cargo.toml  Dockerfile  README.md
ctfs/Hack.lu/2023/web/Awesomenotes_II/public/: create.html  index.html  note.html
ctfs/Hack.lu/2023/web/Awesomenotes_II/src/: main.rs  math_tags.rs
ctfs/KalmarCTF/2023/crypto/Telepound/: Cargo.toml
ctfs/KalmarCTF/2023/crypto/Telepound/aes_frast/: .gitignore  CHANGELOG.md  Cargo.toml
ctfs/N1CTF/2019/Part5-typechecker/plugin/: LICENSE  backdoor.cabal  stack.yaml
ctfs/N1CTF/2019/Part5-typechecker/plugin/chal/: Executor.hs
ctfs/SekaiCTF/2023/pwn/Notification/: CMakeLists.txt  Dockerfile  README.md  ctf.xinetd  flag.txt  notification
ctfs/SekaiCTF/2023/pwn/Notification/libzone/: CMakeLists.txt  README.md  bltree.c  bltree.h  libzone.c  libzone.h  test.c
ctfs/SekaiCTF/2023/pwn/Notification/scripts/: run.sh
ctfs/SekaiCTF/2023/pwn/Notification/src/: notification.c
ctfs/TAMUctf/2022/crypto/rs-ayyy-how-you-doin/: Cargo.toml
ctfs/TAMUctf/2022/crypto/rs-ayyy-how-you-doin/src/: main.rs
ctfs/TAMUctf/2022/pwn/sacrifice/: Cargo.toml  Makefile
ctfs/TAMUctf/2022/pwn/sacrifice/std-lol/: Cargo.toml
ctfs/TetCTF/2023/pwn/db/: CMakeLists.txt  db
ctfs/TetCTF/2023/pwn/db/src/: IOObjects.cpp  IOObjects.h  db.cpp  db.h  main.cpp
p4ctf/2022/pwn/rattlespike/: Cargo.toml  Dockerfile
p4ctf/2022/pwn/rattlespike/src/: classify.rs  negative_adjective.wordlist  negative_noun.wordlist  parser.rs  positive_comparative.wordlist  positive_noun.wordlist  resolve.rs  verify.rs
(+50909 files in other folders)
