[package]
name = "rattlespike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
itertools = "0.10.0"
once_cell = "1.7.2"
roman = "0.1.6"
tempfile = "3.3.0"

[[bin]]
name = "playground"
path = "src/playground.rs"
