[package]
edition = "2018"
name = "bank-cli"
version = "0.1.0"
[dependencies]
borsh = "0.9.1"
chrono = "*"
clap = "3.0.0-beta.2"
solana-client = "1.7.10"
solana-sdk = "1.7.10"
solana-core = "1.7.10"
solana-program = "1.7.10"
solana-streamer = "1.7.10"
spl-associated-token-account = "1.0.3"
spl-token = "*"

[dependencies.bank-program]
features = ["no-entrypoint"]
path = "../program"
