[package]
name = "app"
version = "0.1.0"
authors = ["strellic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["spa"] }
tokio = { version = "1.24.2", features = ["full"] }
