[package]
name = "chess-wasm"
version = "0.1.0"
authors = ["strellic"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-wasm-bindgen = "0.4.5"
anyhow = "1.0.68"
shakmaty = "0.23.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
