[package]
name = "solve-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "*"
spl-token = "*"
solve = { path="./solve/programs/solve", features = ["no-entrypoint"]}
chall = { path="../framework/chall/programs/chall", features = ["no-entrypoint"]}
