[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
solana-program-test = "1.10.29"
solana-program = "1.10.29"
solana-logger = "1.10.29"
solana-sdk = "1.10.29"
spl-token = "3.3.0"
chall = { path = "chall/programs/chall", features = ["no-entrypoint"] }
sol-ctf-framework = { git = "https://github.com/fcremo/sol-ctf-framework", branch="rewrite-v2" }
# sol-ctf-framework = { path="../sol-ctf-framework" }
threadpool = "1.8.1"