[package]
name = "web-lto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-multipart = "0.5.0"
actix-web = { version = "4", features = ["cookies"] }
futures-util = "0.3"
hex = "0.4.3"
pem = "1"
rand = "0.8"
ring = "0.16"
tar = "0.4"
tokio = { version = "*", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "*", features = ["io", "io-util"] }
