[package]
name = "prove_me_wrong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
base64 = "0.21.5"
rand = "0.8.5"
rand_core = "0.6.4"
