[package]
name = "web1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = [ "multipart", "headers" ] }
tokio = { version = "1.32.0", features = ["full"] }
ammonia = "3.3.0"
tower-http = { version = "0.4.4", features = ["full"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
reqwest = "0.11.20"
