[package]
name = "telepound"
version = "0.1.0"
edition = "2021"

[dependencies]
aes_frast = {path = "./aes_frast", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
serde-big-array = "0.5"

[profile.release]
debug = false
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
