[package]
name = "rs-ayyy-how-you-doin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rngcache = "0.1.3"
rsa = "0.5"

[profile.dev.package.num-bigint-dig]
opt-level = 3
