[package]
name = "sacrifice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "time"] }
warp = { version = "0.3", default-features = false }
once_cell = "1.9.0"
sha2 = "0.10.1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
